crates/api-client-server-macros/tests/ui/not_impl_block.stderr
error: expected `impl`
 --> tests/ui/not_impl_block.rs:4:1
  |
4 | pub fn not_an_impl_block() {
  | ^^^
